resolution of implicits

--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,33 @@
 allprojects {
-  apply plugin: 'java'
-  apply plugin: 'java-library'
-  group = 'info.hupel.jimplicits'
-  version = '0.0.1-SNAPSHOT'
-  sourceCompatibility = '11'
-  repositories {
-    mavenCentral()
-  }
+    apply plugin: 'java'
+    apply plugin: 'java-library'
+    group = 'info.hupel.jimplicits'
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = '11'
+    repositories {
+        mavenCentral()
+    }
+    test {
+        useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
+    }
 }
 
 project(':jimplicits-logic') {
-  dependencies {
-    api group: "net.jqwik", name: "jqwik-api", version: "1.1.6"
-    compile group: "com.google.guava", name: "guava", version: "27.1-jre"
-    testImplementation group: "net.jqwik", name: "jqwik-engine", version: "1.1.6"
-    testImplementation group: "org.assertj", name: "assertj-core", version: "3.11.1"
-  }
-  test {
-    useJUnitPlatform()
-    testLogging {
-      events "passed", "skipped", "failed"
+    dependencies {
+        api group: "net.jqwik", name: "jqwik-api", version: "1.1.6"
+        compile group: "com.google.guava", name: "guava", version: "27.1-jre"
+        testImplementation group: "net.jqwik", name: "jqwik-engine", version: "1.1.6"
+        testImplementation group: "org.assertj", name: "assertj-core", version: "3.11.1"
     }
-  }
+}
+
+project(':jimplicits-core') {
+    dependencies {
+        implementation project(':jimplicits-logic')
+        testImplementation group: "org.assertj", name: "assertj-core", version: "3.11.1"
+        testImplementation group: "org.junit.jupiter", name: "junit-jupiter", version: "5.5.1"
+    }
 }
